Tue Nov 23 19:49:07 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/Retriever.cc(IsLocal & IsLocalUser): Fix PR#688, where
	htdig goes into an infinite loop if an entry in local_urls
	(or local_user_urls) is missing a '=' (or a ',').

	* htcommon/cgi.cc(init): Fix bug in reading long queries via POST
	method (PR#668).

	* htnotify/htnotify.cc(send_notification): apply Jason Haar's fix
	to quote the sender name "ht://Dig Notification Service".

Wed Sep 22 11:12:38 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htdoc/ChangeLog, htdoc/isp.html, htdoc/FAQ.html,
	htdoc/RELEASE.html, htdoc/THANKS.html, htdoc/attrs.html,
	htdoc/bugs.html, htdoc/contents.html, htdoc/main.html,
	htdoc/require.html, htdoc/uses.html, htdoc/where.html: Update for
	3.1.3 release and synch with latest versions from the website.

Wed Sep 15 17:54:31 1999  Alexander Bergolth  <leo@leo.wu-wien.ac.at>

	A few changes to satisfy the AIX xlC compiler:
	
	* htdig/htdig.cc: Moved variable declaration out of case block.

	* configure.in, htconfig.in: Add check for sys/select.h.
	Add "long unsigned int" to the possible getpeername_length types.

	* htlib/Connection.cc: Include sys/select.h.

Sun Sep 12 15:02:19 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* .version: Bump for 3.1.3.

	* README: Bump first line for 3.1.3 release, remove mention of rx
	directory.

	* htdoc/ChangeLog: Update with latest version.

	* htdoc/RELEASE.html: Add release notes for 3.1.3 release.

Thu Sep  9 14:52:19 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* contrib/parse_doc.pl: fix bug in pdf title extraction.

Wed Sep  1 15:58:14 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/Retriever.cc(got_word): add code to check for compound words
	and add their component parts to the word database.

	* htdig/PDF.cc(parseString), htdig/Plaintext.cc(parse): Don't strip
	punctuation or lowercase the word before calling got_word.  That
	should be left up to got_word & Word methods.
