@@ -1,10 +1,14 @@
-Tue Nov 23 19:49:07 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>
+Tue Nov 23 19:52:27 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>
+
+	* htdig/HTML.cc(transSGML), htdig/SGMLEntities.cc(translateAndUpdate):
+	Fix the infamous problem in htdig 3.1.3 of mangling URL parameters that
+	contain bare ampersands (&), and not converting &amp; entities in URLs.
 
 	* htdig/Retriever.cc(IsLocal & IsLocalUser): Fix PR#688, where
 	htdig goes into an infinite loop if an entry in local_urls
 	(or local_user_urls) is missing a '=' (or a ',').
 
-	* htcommon/cgi.cc(init): Fix bug in reading long queries via POST
+	* htcommon/cgi.cc(cgi): Fix bug in reading long queries via POST
 	method (PR#668).
 
 	* htnotify/htnotify.cc(send_notification): apply Jason Haar's fix
